force-app/main/default/objects/Reward_Redemption__c/Reward_Redemption__c.object-meta.xml
<CustomObject>
    <label>Reward Redemption</label>
    <nameField>
        <label>Reward Redemption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reward Redemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>