force-app/main/default/objects/Reward_Redemption__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reward Redemptions</relationshipLabel>
    <relationshipName>Reward_Redemptions</relationshipName>
    <type>Lookup</type>
</CustomField>