force-app/main/default/objects/Reward_Redemption__c/fields/Loyalty_Member__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Member</label>
    <referenceTo>Loyalty_Member__c</referenceTo>
    <relationshipLabel>Reward Redemptions</relationshipLabel>
    <relationshipName>Reward_Redemptions</relationshipName>
    <type>Lookup</type>
</CustomField>