force-app/main/default/objects/Reward_Redemption__c/fields/Requested_On__c.field-meta.xml
<CustomField>
    <fullName>Requested_On__c</fullName>
    <label>Requested On</label>
    <type>DateTime</type>
</CustomField>