force-app/main/default/objects/Reward_Redemption__c/fields/Reward_Name__c.field-meta.xml
<CustomField>
    <fullName>Reward_Name__c</fullName>
    <label>Reward Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>