force-app/main/default/objects/Reward_Redemption__c/validationRules/Redemption_Amount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Redemption_Amount_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Redemption Amount must be greater than zero.</errorMessage>
</ValidationRule>